Implement wordgraph and drag and drop

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ <!--  <script type="text/javascript" src="../src/app/touchPunch.js"></script> -->
 
 </head>
 <body>
