--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,11 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <div class="dragTest">Drag with TouchPunch</div>
+  <div class="dropContainer">
+    <div class="drop dropLeft">Drop</div>
+    <div class="drop dropCenter">Drop</div>
+    <div class="drop dropRight">Drop</div>
+  </div>
+
 </ion-content>
