Create d3 canvas with interaction

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,7 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  <div>
-    <h1>Is there uploading without ionic serve?</h1>
-  </div>
+  <div id="canvasContainer"></div>
+  <div id="tooltip">hello</div>
 </ion-content>
