--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,5 +11,8 @@
     <div class="drop dropCenter">Drop</div>
     <div class="drop dropRight">Drop</div>
   </div>
+  <div class="testUrl">
+    <p>{{url}}</p>
+  </div>
 
 </ion-content>
