--- a/src/pages/geo/geo.html
+++ b/src/pages/geo/geo.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the GeoPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +9,10 @@
 
 
 <ion-content padding>
-
+  <h1>The current location is below</h1>
+  <ul>
+    <li>Latitude: {{lat}}</li>
+    <li>Longitude: {{long}}</li>
+    <li>Accuracy: {{acc}}</li>
+  </ul>
 </ion-content>
